Add Question Mark picture for ext. dep.

--- a/plugins/e4sm.de.metamodel/model/e4sm.html
+++ b/plugins/e4sm.de.metamodel/model/e4sm.html
@@ -1,5 +1,5 @@
 <!-- This file was created using the HTML documentation generator. -->
-<!-- Creation date: Wed Apr 28 23:25:00 CEST 2021-->
+<!-- Creation date: Wed Apr 28 23:52:00 CEST 2021-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
@@ -257,7 +257,25 @@ function getElementsByTagNames(list,obj) {
 <h2 id="e4smExternalDependency"><a href="#e4smExternalDependency"><a href="#e4smExternalDependency">ExternalDependency</a></a></h2>
 
 <p>An external dependency is a function which is offered by a third party and can't be controlled.</p>
-<h4><b>Supertype:</b><a href="#e4smSoftwareComponent">SoftwareComponent</a></h4><h2 id="e4smFunction"><a href="#e4smFunction"><a href="#e4smFunction">Function</a></a></h2>
+<h4><b>Supertype:</b><a href="#e4smSoftwareComponent">SoftwareComponent</a></h4><table>
+<tr>
+	<th colspan="3"><div class="tableHeader">Operations</div></th>
+</tr>
+<tr>
+	<th><div class="columnHeader">Name</div></th>
+	<th><div class="columnHeader">Properties</div></th>
+	<th><div class="columnHeader">Documentation</div></th>
+</tr>
+<tr>	<td><div id="e4smExternalDependency.computeMainResponsible" class="teletype">computeMainResponsible</div>
+	</td>
+	<td><div class="keyValue"><span class="label">T: </span><span class="teletype"><a href="#e4smPerson">Person</a></span></div>
+<div class="label">Cardinality: [0..1]</div>
+<div class="label">Returns:</div>
+<a href="#e4smPerson">Person</a>[0..1]
+ </td><td> </td>
+		</tr></table>
+<a href="#e4sm.ExternalDependency.op"></a>
+<h2 id="e4smFunction"><a href="#e4smFunction"><a href="#e4smFunction">Function</a></a></h2>
 
 <p>A function is a in-house programmed software which is considered to be safe (apart from a low output uncertainty due to possible bugs)</p>
 <h4><b>Supertype:</b><a href="#e4smSoftwareComponent">SoftwareComponent</a></h4><h2 id="e4smHeuristic"><a href="#e4smHeuristic"><a href="#e4smHeuristic">Heuristic</a></a></h2>
