added more branding
intro plugin + customization.ini

--- a/packaging/e4sm.de.intro.custom/index.html
+++ b/packaging/e4sm.de.intro.custom/index.html
@@ -20,54 +20,46 @@
 
 <h3>Creating a E4SM Model:</h3>
 
-<p><span style="font-size:14px">first off you need to create a modelling project, go through the toolbar like so</span>&nbsp; -&nbsp;<em>File &gt; New &gt; Modelling Project</em></p>
+<p><span style="font-size:14px">first off you need to create a modeling project, go through the toolbar like so</span><strong>&nbsp; -&nbsp;<em>File &gt; New &gt; Modeling Project</em></strong></p>
 
 <p><span style="font-size:14px">now choose a name</span><em> -&nbsp;</em>Project name: &lt;ExampleProject&gt;</p>
 
-<p><span style="font-size:14px">then press <em>finish</em></span></p>
+<p><span style="font-size:14px">then press <strong>finish</strong></span></p>
+<br />
 
-<p>&nbsp;</p><br />
-
-<p><span style="font-size:14px">in order to create a E4SM model you need to right-click on your new modelling project and make your way through like this</span> -&nbsp;<em>New &gt; Other... &gt; E4SM Model Creation Wizard &gt; E4SM Model</em></p>
+<p><span style="font-size:14px">in order to create a E4SM model you need to right-click on your new modeling project and make your way through like this</span><strong> -&nbsp;<em>New &gt; Other... &gt; E4SM Model Creation Wizard &gt; E4SM Model</em></strong></p>
 
 <p><span style="font-size:14px">now choose a name ending in <strong>.e4sm</strong></span> - File name: &lt;ExampleModel.e4sm&gt;</p>
 
-<p><span style="font-size:14px">then press <em>finish</em></span></p>
-
-<p>&nbsp;</p><br />
+<p><span style="font-size:14px">then press <strong>finish</strong></span></p>
+<br />
 
 <p>extending the model requires you to double-left-click a <strong>.e4sm</strong>&nbsp; model-file, you should be able to see a kind of collapsed &quot;path&quot;</p>
 
-<p>click on the small arrow to make the Modell component appear, right-clicking this &quot;Modell&quot; gives you the option to start creating parts via the <strong>New Child </strong>functionality</p>
+<p>click on the small arrow to make the Model component appear, right-clicking this &quot;Model&quot; gives you the option to start creating parts via the <strong>New Child </strong>functionality</p>
 
 <p>at this point you can freely build whatever model you want to</p>
-
-<p>&nbsp;</p><br />
+<br />
 
 <h3>Using other Representations:</h3>
 
 <p>the E4SM Editor provides the option to build a package via drag-and-drop<br />
 if you want to use this functionality you will need to have already created a package via the New Child functionality in a model<br />
 <br />
-all you then need to do is right-click the package in the left-side model explorer and follow this - <em>New Representation &gt; [DTD]</em>&nbsp;<br />
+all you then need to do is right-click the package in the left-side model explorer and follow this <strong>- <em>New Representation &gt; [DTD]</em></strong>&nbsp;<br />
 <br />
 choose a name and press ok, the view should automatically open itself along with the drag-and-drop palette on the right side</p>
 
-<p>&nbsp;</p>
-
 <p>other useful representations can be created for the model-component, such as a <strong>Class Diagram</strong>, <strong>Documentation Table</strong> and <strong>Person Management Table</strong></p>
-
-<p>&nbsp;</p><br />
-
-<p>&nbsp;</p>
+<br />
 
 <h3>Undoing components:</h3>
 
-<p>undoing the creation or deletion of your latest component can be achieved via right-clicking the Modell component and choosing the &quot;Undo &lt;...&gt;&quot; option<br />
+<p>undoing the creation or deletion of your latest component can be achieved via right-clicking the Model component and choosing the <strong>&quot;Undo &lt;...&gt;&quot;</strong> option<br />
 <br />
 the &quot;Redo &lt;...&gt;&quot; option cancels out the &quot;Undo &lt;...&gt;&quot; option, if there ever arises a need to undo the latest undo</p>
-
-	<p>&nbsp;</p><br />
+<br />
+	
 
 	<h3>Using text-format to create a model:</h3>
 
@@ -77,44 +69,38 @@ the &quot;Redo &lt;...&gt;&quot; option cancels out the &quot;Undo &lt;...&gt;&q
 
 		<p>in this file one can now simply write like so -&nbsp;</p>
 
-		<p>model binaryModel{<br />
+		<pre><code><p>model binaryModel{
+	package p1 {
+		sensor s1 {
+			out s1_out
+		},
 
-			package p1 {<br />
+		binaryClassificationComponent b1 {
+			in b1_in,
+			out b2_out
+			numberOfServers 3 confusionMatrixes { confusion matrix cm1 {TP : 200, FN : 2, FP: 5, TN: 8} }
+		},
+		actuator a1 {
+			in a1_in
+		}
+		connector c1 "s1.s1_out" -> "b1.b1_in",
+		connector c2 "b1.b2_out" -> "a1.a1_in"
+	}
+}</p></code></pre>
 
-			sensor s1 {<br />
-
-			out s1_out<br />
-
-			},<br />
-
-		binaryClassificationComponent b1 {<br />
-
-			in b1_in,<br />
-
-			out b2_out<br />
-
-			numberOfServers 3 confusionMatrixes { confusion matrix cm1 {TP : 200, FN : 2, FP: 5, TN: 8}<br />
-
-			}<br />
-
-			},<br />
-
-		actuator a1 {<br />
-
-			in a1_in<br />
-
-			}<br />
-
-		connector c1 "s1.s1_out" -> "b1.b1_in",<br />
-
-		connector c2 "b1.b2_out" -> "a1.a1_in"<br />
-
-			}<br />
-
-		}</p><br />
-
-		
-
+		<h3>Transforming a Model into a Stochastic Colored Petri Net:</h3>
+		<p><pre>It is possible to transform a .e4sm model or .e4smcode file into a scpn as a .xml file. 
+You only need to go to the Run Configurations menu, click on QVTO Operational Transformation and create a new Configuration.
+Now insert the following into the Transformation module box: 
+	platform:/plugin/e4sm.de.metamodel.to.scpn.qvto/transforms/transformToSCPN.qvto
+	
+The IN Model takes the path of your desired Model which is going to be transformed: 
+	platform:/resource/ModelingProject/example.e4smcode
+	
+The OUT Model needs a path which ends as an .xml file, this will be created the moment that Run is pressed:
+	platform:/resource/ModelingProject/SCPN/example.xml
+	
+Clicking <strong>Apply</strong> and then <strong>Run</strong> will execute the transformation and generate the.xml file</pre></p>
 	        
         </div>
       
